@@ -8,6 +8,10 @@ Changelog
   renamed.
   [hannosch, timo]
 
+- Make sure only comments to the content object are removed from the catalog
+  when the content object is moved.
+  [hannosch, timo]
+
 
 2.0.9 (2011-07-25)
 ------------------
